[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
    "black",
]

[project]
name = "useml"
version = "0.0.2"
description = "Simplifying PyTorch workflows: Pipeline, Versioning, and Vault."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Enzo-py", email = "85191552+Enzo-py@users.noreply.github.com"}]
dependencies = [
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.urls]
"Homepage" = "https://github.com/Enzo-py/useml"
"Bug Tracker" = "https://github.com/Enzo-py/useml/issues"
